# spark-k8s-cluster-example

./: README.md  install.sh  pyproject.toml  values.yaml
.metals/: metals.lock.db  metals.mv.db
example/test-spark/: build.sbt
example/test-spark/project/: Dependencies.scala
example/test-spark/src/main/scala/com/omnious/example/: Hello.scala
example/test-spark/src/test/scala/com/omnious/example/: HelloSpec.scala
