[tool.poetry]
name = "spark-cluster"
version = "0.1.0"
description = ""
authors = ["kairos03 <kairos9603@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyspark-gcs = "^2.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
